--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
             "email": "versh23@gmail.com"
         }
     ],
+    "minimum-stability": "dev",
     "require": {
         "php": "^8.0",
         "symfony/messenger": "^5.0",
