--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,9 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "php": "^8.0",
-        "symfony/messenger": "^5.0",
-        "enqueue/stomp": "^0.10.9"
+        "php": "^8.0|^8.1",
+        "symfony/messenger": "^6",
+        "enqueue/stomp": "^0"
     },
     "autoload": {
         "psr-4": {
