Update to php 8.1 and symfony 6.1

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     "repositories": [
         {
             "type": "vcs",
-            "url": "git@github.com:omcomcode/stomp.git"
+            "url": "git@github.com:omcomcode/stomp.git",
+            "canonical": false
         }
     ],
     "require": {
