--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     ],
     "require": {
         "php": "^8.0|^8.1",
-        "symfony/messenger": "^6",
+        "symfony/messenger": "^5|^6",
         "enqueue/stomp": "dev-master"
     },
     "autoload": {
